# kalshi-pmx

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
examples/: list_markets.rs  live_orderbook.rs  market_snapshot.rs  order_request_builder.rs  read_portfolio.rs  stream_ticker.rs  typed_operations.rs
examples/common/: mod.rs
specs/: openapi.yaml
src/: auth.rs  client.rs  config.rs  error.rs  generated.rs  lib.rs  pagination.rs  params.rs  rate_limit.rs  typed.rs
src/models/: mod.rs
src/rest/: account.rs  api_keys.rs  communications.rs  events.rs  exchange.rs  fcm.rs  historical.rs  incentive_programs.rs  live_data.rs  markets.rs  milestones.rs  mod.rs  multivariate.rs  order_groups.rs  orders.rs  portfolio.rs  search.rs  structured_targets.rs
src/ws/: client.rs  message.rs  mod.rs  orderbook.rs  subscription.rs
tests/: client_behavior.rs  generated_builders.rs  live_demo.rs  models.rs  pagination_config.rs  rest_routes.rs  spec_coverage.rs  typed_routes.rs  ws.rs  ws_client.rs
xtask/: Cargo.toml
xtask/src/: main.rs
