[package]
name = "kalshi-pmx"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Async Rust client for Kalshi's Trade API and WebSocket streams."
license = "MIT"
repository = "https://github.com/neels/kalshi-pmx"
documentation = "https://docs.rs/kalshi-pmx"
readme = "README.md"
keywords = ["kalshi", "trading", "prediction-markets", "tokio", "websocket"]
categories = ["api-bindings", "asynchronous", "finance"]
include = [
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
    ".env.example",
    "examples/**/*.rs",
    "src/**/*.rs",
    "tests/**/*.rs",
]

[dependencies]
base64 = "0.22"
dotenvy = "0.15"
futures-util = "0.3"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rsa = { version = "0.9", features = ["pem", "sha2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
url = "2"
urlencoding = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
